fix display collapse

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -40,6 +40,9 @@
   .input {
     display: flex;
     flex-direction: row;
+    & > .inner_cell {
+      overflow: auto;
+    }
   }
   div.output_area {
     display: flex;
